--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "d3-ease": "1.0.5",
     "emailjs-com": "^3.2.0",
+    "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hexagon": "^1.1.3",
     "react-icons": "^4.3.1",
+    "react-move": "5.2.1",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
     "reactjs-percentage-circle": "^1.0.0",
     "styled-components": "^5.3.3",
-    "react-move": "5.2.1",
-    "d3-ease": "1.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
