--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^3.2.0",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
+    "react-animated-heart": "0.0.7-alpha.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hexagon": "^1.1.3",
@@ -22,7 +23,6 @@
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
-    "reactjs-percentage-circle": "^1.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
